@@ -1,0 +1,6 @@
+<title>Search Results</title>
+<script>
+  window.moveTo(0,0);
+  window.resizeTo(screen.availWidth, screen.availHeight);
+</script>
+<body bgcolor=threedface style=border:0>
