@@ -14,7 +14,8 @@ Modified Searches
 
 Enhancements
 
-* 
+* pagetemplate preference - set to "maximized.htm" to maximize results window; or set to any HTML
+  page that sets up the browser window the way you want it for your results. 
 
 Bug Fixes
 
